--- a/config/database.yml
+++ b/config/database.yml
@@ -1,26 +1,21 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: send_development
   pool: 5
-  timeout: 5000
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
+  username: fruityfree
+  password: unilever
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: send_test
   pool: 5
-  timeout: 5000
-
+  username: fruityfree
+  password: unilever
 production:
-  adapter: mysql2
-  database: send
-  host: localhost
+  adapter: postgresql
+  encoding: unicode
+  database: send_production
+  pool: 5
   username: fruityfree
   password: unilever
